@@ -1,3 +1,9 @@
+2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* Portable option in Win32 can be accessed from command line
+		for Exult and Exult Studio. -p is the parameter for both.
+		cheat.cc, exult.cc, files.utils.cc, mapedit/exult_studio.cc,
+		mapedit/studio.cc
+
 2010-12-06 Dominik Reichardt <dominus@users.sourceforge.net>
 	* configure.ac: enable_exult_studio_support will add -lX11 to SYSLIBS. Fixes some
 	  final linking problems in some Linux distributions
